SERVER-70357 fix data race generating mongobridge random number seed